update tab icon

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+
+    <link rel="icon" href="../src/assets/programming.png" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
