home page mobile responsive

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,11 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" href="../src/assets/programming.png" />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="./img/icons/programming.png"
+    />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
