--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       type="image/png"
       href="./img/icons/programming.png"
     />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>My Coding Stats</title>
   </head>
   <body>
     <noscript>
